# ai-meeting-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/core/: assistant.py  llm.py
src/utils/: main_utils.py  whisper_utils.py
ui/: gradio_app.py
